# Homology-poset-builder

./: .gitignore  CMakeLists.txt  complex_struct.c  main.c
poset_builder.build/Debug/ALL_BUILD.build/: Script-4A7087E2BD5D4BAFB6106C32.sh  dgph  dgph~
poset_builder.build/Debug/ZERO_CHECK.build/: Script-F27DA7F9942F4AA6944A46ED.sh  dgph  dgph~
poset_builder.build/Debug/poset_builder.build/: dgph  dgph~
poset_builder.build/Debug/poset_builder.build/Objects-normal/x86_64/: complex_struct.d  file_util.d  poset_builder.LinkFileList  simplex_basic.d
poset_builder.build/Release/ZERO_CHECK.build/: dgph  dgph~
poset_builder.build/Release/poset_builder.build/: dgph
poset_builder.build/Release/poset_builder.build/Objects-normal/x86_64/: main.d  poset_builder.LinkFileList
poset_builder.xcodeproj/: project.pbxproj
poset_builder.xcodeproj/project.xcworkspace/xcuserdata/lukasa.xcuserdatad/: UserInterfaceState.xcuserstate
poset_builder.xcodeproj/xcuserdata/lukasa.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  poset_builder.xcscheme  xcschememanagement.plist
